# ncov

./: .gitignore  CNAME  LICENSE  README.md  dev.md  index.html  main.css  main.js  package.json  webpack.config.js
.github/workflows/: deploy.yml
ai/: README.md
ai/split-chinese/: README.md  base-word2vec.py  dataset-covid-19-report-by-nhc.xlsx  dataset-covide-16-report-by-nhc.txt  jieba-base.py  python-parser-covid-19-china-report.py  requirements.txt
chartLib/: map_geo.js  mapv_op.js
client/: README.md  docker-compose.yml  draft.md  package.json  shim.d.ts  tsconfig.json  webpack.config.js  webpack.config.pro.js
client/public/: 2020-01-20.js  2020-01-21.js  2020-01-22.js  2020-01-23.js  2020-01-24.js  2020-01-25.js  2020-01-26.js  2020-01-27.js  2020-01-28.js  2020-01-29.js  data.js  index.html
client/src/: App-1.vue  App.vue  config.js  main.js  main.ts  routes.ts  store.ts
public/: README.md  data.js
scripts/: deploy-client.sh  deploy-server.sh  deploy.sh
servers/: README.md  docker-compose.yml
servers/docker-go/: README.md  WHO-COVID-19-global-data.csv  go.mod  go.sum  main.go
servers/docker-kafka/: REDME.md  docker-compose.yml
servers/docker-mongo/: README.md  docker-compose.yml
servers/docker-node/: README.md  docker-compose.yml  ecosystem.config.js  package.json
servers/docker-python/: .Dockerfile  README.md  app.py  app.sh  consumer_kafka.py  (+13 more)
servers/docker-rust/: Cargo.toml  README.md
servers/docker-rust/src/: main.rs  nickel_rust_server.rs
servers/docker-rust/static/: 404.html  welcome.html
src/: App.vue  draw.js  main.js
(+192 files in other folders)
